# durec-multichannel-mixdown

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: automerge.yml  ci.yml  release.yml
android/app/: build.gradle.kts
assets/licenses/: rust-third-party.txt
docs/: GUIDE.md  PLAN-M3a.md  PLAN.md
engine/: Cargo.toml
engine/examples/: analyze_demo.rs  gen_fixture.rs  master_demo.rs  play_demo.rs  render_demo.rs
engine/src/: analysis.rs  chain.rs  dsp.rs  error.rs  ixml.rs  lib.rs  mastering.rs  mix.rs  playback.rs  reference.rs  render.rs  session.rs  sink.rs  wav.rs
engine/src/dsp/: biquad.rs  dither.rs  fir.rs  limiter.rs  mod.rs
engine/tests/: engine_tests.rs
integration_test/: app_test.dart  simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/io/: ios_files.dart  saf.dart
lib/src/rust/: frb_generated.dart  (+2 more)
lib/state/: analysis_cache.dart  app_info.dart  app_settings.dart  batch_export.dart  export_controller.dart  feedback.dart  mastering_controller.dart  mix_types.dart  mixer_scope.dart  mixer_state.dart  playback_controller.dart  reference_profile_cache.dart  session_paths.dart  stereo_pairs.dart  update_check.dart  wav_browser.dart
lib/ui/: animated_logo.dart  app_banners.dart  app_colors.dart  formats.dart  meters.dart  mixer_screen.dart  track_strip.dart  wav_browser_page.dart  waveform.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner/: DebugProfile.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: android.rs  frb_generated.rs  lib.rs
rust/src/api/: mixer.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_durecmix.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_durecmix.podspec
rust_builder/windows/: CMakeLists.txt
secrets/: PASSWORDS.txt  README.md  durecmix-release.keystore  keystore.base64
test/: feedback_update_test.dart  mixer_state_test.dart  settings_dialog_width_test.dart
tool/: annotate_screenshots.py  gen_rust_licenses.py  make_screenshots.sh
tool/licenses/: MIT.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
