[package]
name = "durecmix-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hound = "3.5"
cpal = "0.18"
ebur128 = "0.1"
rtrb = "0.3"
flacenc = "0.5.1"
mp3lame-encoder = "0.2.4"
realfft = "3"
symphonia = { version = "0.5", features = ["mp3"] }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
claxon = "0.4.3"
